# streamsync_bubblemessage

./: README.md  pyproject.toml
src/streamsync_bubblemessage/extensions/: style.css  templates.umd.js
